--- a/task_9_2.ipynb
+++ b/task_9_2.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1125c5e8",
+   "metadata": {},
+   "source": [
+    "### Import modules"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "id": "ecd43308",
    "metadata": {},
    "outputs": [],
@@ -17,8 +25,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "018cdc60",
+   "metadata": {},
+   "source": [
+    "### Input data and correlation index for manager ID and the given performance score (PIP, Needs Improvement, Fully Meets, Exceeds)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 74,
    "id": "96fba61f",
    "metadata": {},
    "outputs": [
@@ -82,12 +98,20 @@
    "id": "64a0fd37",
    "metadata": {},
    "source": [
-    "There is no pronounced correlation between the manager ID and the performance score."
+    "#### There is no pronounced correlation between the manager ID and the performance score."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01ac1eb1",
+   "metadata": {},
+   "source": [
+    "### Calculating the time the employees stay at the company to find out the best method of recruitment to keep the employees"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "id": "3a3792e4",
    "metadata": {},
    "outputs": [],
@@ -99,8 +123,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9fa777a1",
+   "metadata": {},
+   "source": [
+    "### Answering the question about the best recruitment method"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 76,
    "id": "66ec167c",
    "metadata": {},
    "outputs": [
@@ -110,7 +142,7 @@
        "'Employee Referral 56907.0'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,12 +156,20 @@
    "id": "820e82f4",
    "metadata": {},
    "source": [
-    "The best type to keep the employees is Employee Referral."
+    "#### The best method to keep the employees is Employee Referral (overall 56907 days of staying at the company)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3e27a90",
+   "metadata": {},
+   "source": [
+    "### Correlation between being married or a single and the satisfaction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 77,
    "id": "c0e80c48",
    "metadata": {},
    "outputs": [
@@ -241,7 +281,7 @@
        "4                        5.0       9.0     33.0        5.0    49.0      2.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,12 +303,20 @@
    "id": "e7fedc12",
    "metadata": {},
    "source": [
-    "There is a strong correlation between being a single and being quite satisfied with the job in contrast to being married. Singles are more likely to provide higher satisfaction scores according to the data. Furthermore, the other categories have a low data count and are therefore excluded from the analysis."
+    "#### There is a strong correlation between being a single and being quite satisfied with the job in contrast to being married. Singles are more likely to provide higher satisfaction scores according to the data. Furthermore, the other categories have a low data count (as seen above) and are therefore excluded from the analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8fcdcfa",
+   "metadata": {},
+   "source": [
+    "### Working with the data to get the age distribution of the employees"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 78,
    "id": "3077964f",
    "metadata": {},
    "outputs": [],
@@ -288,8 +336,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76f1f190",
+   "metadata": {},
+   "source": [
+    "### Visualizing the age distribution of the employees as a histogram"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 79,
    "id": "2c30c4ae",
    "metadata": {},
    "outputs": [
@@ -305,7 +361,8 @@
     }
    ],
    "source": [
-    "df_new_years_2['years'].plot(kind='hist',bins=50,color='b',xlabel=\"age\").locator_params(axis='y', integer=True)"
+    "df_new_years_2['years'].plot(kind='hist',bins=50,color='b',xlabel=\"age\").locator_params(axis='y', integer=True)\n",
+    "plt.show()"
    ]
   },
   {
@@ -313,12 +370,20 @@
    "id": "fc6d3cd1",
    "metadata": {},
    "source": [
-    "Most of the employees are between 30 and about 40 years old."
+    "#### Most of the employees are between 30 and about 40 years old."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9fc4ab7",
+   "metadata": {},
+   "source": [
+    "### Visualizing the age dependency of the amount of special projects"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 80,
    "id": "70a3a4ed",
    "metadata": {},
    "outputs": [
@@ -352,7 +417,7 @@
    "id": "69e0b150",
    "metadata": {},
    "source": [
-    "The younger employees have a higher number of special projects."
+    "#### The younger employees have a higher number of special projects."
    ]
   }
  ],
